# deep_tag

./: .gitignore  BUILD_NOTES.TXT  CMakeLists.txt  README.TXT  WINDOWS_BUILD_NOTES.TXT  createrectdialog.cpp  createrectdialog.h  createrectdialog.ui  deep_tag.iss  deep_tag.qrc  dt.xcf  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  readme.txt  startupdialog.cpp  startupdialog.h  startupdialog.ui
opencv/lib/: libopencv_alphamat.so.4.5.1  libopencv_aruco.so.4.5.1  libopencv_bgsegm.so.4.5.1  libopencv_bioinspired.so.4.5.1  libopencv_calib3d.so.4.5.1  libopencv_ccalib.so.4.5.1  libopencv_datasets.so.4.5.1  libopencv_dnn_objdetect.so.4.5.1  libopencv_dnn_superres.so.4.5.1  libopencv_dpm.so.4.5.1  libopencv_face.so.4.5.1  libopencv_features2d.so.4.5.1  libopencv_flann.so.4.5.1  libopencv_fuzzy.so.4.5.1  libopencv_hfs.so.4.5.1  libopencv_highgui.so.4.5.1  libopencv_img_hash.so.4.5.1  libopencv_imgcodecs.so.4.5.1  libopencv_intensity_transform.so.4.5.1  libopencv_line_descriptor.so.4.5.1  libopencv_mcc.so.4.5.1  libopencv_ml.so.4.5.1  libopencv_objdetect.so.4.5.1  libopencv_optflow.so.4.5.1  libopencv_phase_unwrapping.so.4.5.1  libopencv_photo.so.4.5.1  libopencv_plot.so.4.5.1  libopencv_quality.so.4.5.1  libopencv_rapid.so.4.5.1  libopencv_reg.so.4.5.1  libopencv_rgbd.so.4.5.1  libopencv_saliency.so.4.5.1  libopencv_shape.so.4.5.1  libopencv_stereo.so.4.5.1  libopencv_stitching.so.4.5.1  libopencv_structured_light.so.4.5.1  libopencv_superres.so.4.5.1  libopencv_surface_matching.so.4.5.1  libopencv_text.so.4.5.1  libopencv_tracking.so.4.5.1  (+7 more)
opencv/lib/cmake/opencv4/: OpenCVModules.cmake
opencv/linux/x64/debug/include/opencv4/opencv2/: cvconfig.h  opencv_modules.hpp
opencv/linux/x64/debug/lib/: libopencv_alphamat.so.4.5.1  libopencv_aruco.so.4.5.1  libopencv_bgsegm.so.4.5.1  libopencv_bioinspired.so.4.5.1  libopencv_calib3d.so.4.5.1  libopencv_ccalib.so.4.5.1  libopencv_datasets.so.4.5.1  libopencv_dnn_objdetect.so.4.5.1  libopencv_dnn_superres.so.4.5.1  libopencv_dpm.so.4.5.1  libopencv_face.so.4.5.1  libopencv_features2d.so.4.5.1  libopencv_flann.so.4.5.1  libopencv_fuzzy.so.4.5.1  libopencv_hfs.so.4.5.1  libopencv_highgui.so.4.5.1  libopencv_img_hash.so.4.5.1  libopencv_imgcodecs.so.4.5.1  libopencv_intensity_transform.so.4.5.1  libopencv_line_descriptor.so.4.5.1  libopencv_mcc.so.4.5.1  libopencv_ml.so.4.5.1  libopencv_objdetect.so.4.5.1  libopencv_optflow.so.4.5.1  libopencv_phase_unwrapping.so.4.5.1  libopencv_photo.so.4.5.1  libopencv_plot.so.4.5.1  libopencv_quality.so.4.5.1  libopencv_rapid.so.4.5.1  libopencv_reg.so.4.5.1  libopencv_rgbd.so.4.5.1  libopencv_saliency.so.4.5.1  libopencv_shape.so.4.5.1  libopencv_stereo.so.4.5.1  libopencv_stitching.so.4.5.1  libopencv_structured_light.so.4.5.1  libopencv_superres.so.4.5.1  libopencv_surface_matching.so.4.5.1  libopencv_text.so.4.5.1  libopencv_tracking.so.4.5.1  (+7 more)
opencv/linux/x64/release/lib/: libopencv_alphamat.so.4.5.1  libopencv_aruco.so.4.5.1  libopencv_bgsegm.so.4.5.1  libopencv_bioinspired.so.4.5.1  libopencv_calib3d.so.4.5.1  libopencv_ccalib.so.4.5.1  libopencv_datasets.so.4.5.1  libopencv_dnn_objdetect.so.4.5.1  libopencv_dnn_superres.so.4.5.1  libopencv_dpm.so.4.5.1  libopencv_face.so.4.5.1  libopencv_features2d.so.4.5.1  libopencv_flann.so.4.5.1  libopencv_fuzzy.so.4.5.1  libopencv_hfs.so.4.5.1  libopencv_highgui.so.4.5.1  libopencv_img_hash.so.4.5.1  libopencv_imgcodecs.so.4.5.1  libopencv_intensity_transform.so.4.5.1  libopencv_line_descriptor.so.4.5.1  libopencv_mcc.so.4.5.1  libopencv_ml.so.4.5.1  libopencv_objdetect.so.4.5.1  libopencv_optflow.so.4.5.1  libopencv_phase_unwrapping.so.4.5.1  libopencv_photo.so.4.5.1  libopencv_plot.so.4.5.1  libopencv_quality.so.4.5.1  libopencv_rapid.so.4.5.1  libopencv_reg.so.4.5.1  libopencv_rgbd.so.4.5.1  libopencv_saliency.so.4.5.1  libopencv_shape.so.4.5.1  libopencv_stereo.so.4.5.1  libopencv_stitching.so.4.5.1  libopencv_structured_light.so.4.5.1  libopencv_superres.so.4.5.1  libopencv_surface_matching.so.4.5.1  libopencv_text.so.4.5.1  libopencv_tracking.so.4.5.1  (+7 more)
opencv/linux/x64/release/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake
opencv/windows/vc16/debug/x64/lib/: opencv_aruco451d.lib  opencv_bgsegm451d.lib  opencv_datasets451d.lib  opencv_dnn_superres451d.lib  opencv_fuzzy451d.lib  opencv_img_hash451d.lib  opencv_mcc451d.lib  opencv_optflow451d.lib  opencv_quality451d.lib  opencv_rapid451d.lib  opencv_reg451d.lib  opencv_stereo451d.lib  opencv_structured_light451d.lib  opencv_superres451d.lib  opencv_surface_matching451d.lib  opencv_text451d.lib  opencv_tracking451d.lib  opencv_ximgproc451d.lib  opencv_xobjdetect451d.lib  opencv_xphoto451d.lib
opencv/windows/vc16/debug/x64/vc16/lib/: OpenCVModules-debug.cmake  opencv_bioinspired451d.lib  opencv_ccalib451d.lib  opencv_core451d.lib  opencv_dnn_objdetect451d.lib  opencv_dpm451d.lib  opencv_face451d.lib  opencv_hfs451d.lib  opencv_imgproc451d.lib  opencv_intensity_transform451d.lib  opencv_line_descriptor451d.lib  opencv_phase_unwrapping451d.lib  opencv_plot451d.lib  opencv_saliency451d.lib  opencv_shape451d.lib  opencv_videostab451d.lib
opencv/windows/vc16/release/: setup_vars_opencv4.cmd
opencv/windows/vc16/release/x64/lib/: opencv_aruco451.lib  opencv_bgsegm451.lib  opencv_core451.lib  opencv_dnn_objdetect451.lib  opencv_dnn_superres451.lib  opencv_dpm451.lib  opencv_fuzzy451.lib  opencv_hfs451.lib  opencv_img_hash451.lib  opencv_imgproc451.lib  opencv_intensity_transform451.lib  opencv_line_descriptor451.lib  opencv_quality451.lib  opencv_shape451.lib  opencv_stereo451.lib  opencv_structured_light451.lib  opencv_superres451.lib  opencv_surface_matching451.lib  opencv_text451.lib  opencv_ximgproc451.lib  opencv_xphoto451.lib
opencv/windows/vc16/release/x64/vc16/lib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_bioinspired451.lib  opencv_ccalib451.lib  opencv_datasets451.lib  opencv_face451.lib  opencv_mcc451.lib  (+9 more)
pro_files/deep_tag/: deep_tag.pro
python_utils/: label_map_util.py  split_voc.py  voc_to_tfrecord.py
